--- a/src/components/Help/index.css
+++ b/src/components/Help/index.css
@@ -9,11 +9,13 @@ h2 {
 
 ul {
   list-style-type: none;
+  color: black;
 }
 
 ol {
   padding: 5px;
   text-align: left;
+  color: black;
 }
 
 .images {
