--- a/src/components/Feedback/index.css
+++ b/src/components/Feedback/index.css
@@ -1,4 +1,4 @@
-h2 {
+/*h2 {
   font-size: 2vw;
   text-align: center;
 }
@@ -9,6 +9,62 @@ h2 {
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
+  text-align: center;
+  padding: 10px 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: v;
+}
+*/
+
+.ha {
+  text-align: center;
+  font-size: 2.5vw;
+  margin: 0px;
+  padding-bottom: 0px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hb {
+  font-size: 1.5vw;
+  text-align: center;
+  justify-content: center;
+  margin: 10px;
+  margin-top: 0px;
+  padding-top: 0px;
+  font-weight: 800;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hc {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 0px;
+  padding-bottom: 0px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hd {
+  text-align: left;
+  margin: 0;
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-left: 10px;
+}
+
+.he {
+  margin: 0;
+  font-size: 1.25vw;
+  padding-left: 10px;
+}
+
+.pictur {
+  width: 12.5vw;
+  height: auto;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 10px;
   text-align: center;
   padding: 10px 20px;
   display: block;
