--- a/src/components/SWOT/index.css
+++ b/src/components/SWOT/index.css
@@ -1,5 +1,59 @@
-/*
-.header{
-  color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 275px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; 
+.ha {
+  text-align: center;
+  font-size: 2.5vw;
+  margin: 0px;
+  padding-bottom: 0px;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-*/
+
+.hb {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 10px;
+  margin-top: 0px;
+  padding-top: 0px;
+  font-weight: 800;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hc {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 10px;
+  margin-top: 0px;
+  padding-top: 0px;
+  font-weight: 800;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hd {
+  text-align: left;
+  margin: 0;
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-left: 10px;
+}
+
+.space {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.he {
+  margin: 0;
+  font-size: 1.25vw;
+  padding-left: 10px;
+}
+
+.pictur {
+  width: 12.5vw;
+  height: auto;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 10px;
+  text-align: center;
+  padding: 10px 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
