--- a/src/components/SignIn/index.css
+++ b/src/components/SignIn/index.css
@@ -1,21 +1,3 @@
-.title {
-  font-size: 2vw;
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-.images {
-  width: 12.5vw;
-  height: auto;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
-  text-align: center;
-  padding: 10px 20px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .input {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -26,4 +8,62 @@
   .title {
     font-size: 4vw;
   }
+}
+
+h4 {
+  text-align: center;
+  margin: -8px;
+  padding: 0;
+}
+
+.ha {
+  text-align: center;
+  font-size: 2.5vw;
+  margin: 0px;
+  padding-bottom: 0px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hb {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 10px;
+  margin-top: 0px;
+  padding-top: 0px;
+  font-weight: 800;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hc {
+  margin: 10px;
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-left: 10px;
+}
+
+.hd {
+  text-align: center;
+  margin: 0;
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-left: 10px;
+}
+
+.he {
+  margin: 0;
+  font-size: 1.25vw;
+  padding-left: 10px;
+}
+
+.pictur {
+  width: 12.5vw;
+  height: auto;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 10px;
+  text-align: center;
+  padding: 10px 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
