--- a/src/components/SignUp/index.css
+++ b/src/components/SignUp/index.css
@@ -1,4 +1,4 @@
-.title {
+/*.title {
   height: 50px;
   display: flex;
   justify-content: center;
@@ -6,22 +6,64 @@
   font-size: 5vw;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
-
-.signUp {
-  height: 20px;
-  display: flex;
+*/
+.links {
+  text-align: center;
+  height: 10px;
   justify-content: center;
   align-items: center;
-  font-size: 2vw;
+  font-size: 1.5vw;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.ha {
+  text-align: center;
+  font-size: 2.5vw;
+  margin: 0px;
+  padding-bottom: 0px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-.images {
+.hb {
+  text-align: center;
+  font-size: 1.5vw;
+  margin: 10px;
+  margin-top: 0px;
+  padding-top: 0px;
+  font-weight: 800;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.hc {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0;
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-left: 10px;
+}
+
+.hd {
+  text-align: left;
+  margin: 0;
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-left: 10px;
+}
+
+.he {
+  margin: 0;
+  font-size: 1.25vw;
+  padding-left: 10px;
+}
+
+.pictur {
   width: 12.5vw;
   height: auto;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   text-align: center;
   padding: 10px 20px;
   display: block;
